--- a/Infra/deployment.yaml
+++ b/Infra/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: airlab-app
-          image: airlab-app:1.1
+          image: airlab-app:latest
           ports:
           - containerPort: 8000
           env:
