--- a/.github/workflows/docker-local.yml
+++ b/.github/workflows/docker-local.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Configure Docker to Use Minikube Registry
         run: |
           # Configure Docker to use the Minikube Docker daemon
-          eval $(minikube -p minikube docker-env)
-          #minikube docker-env | Invoke-Expression      
+          #eval $(minikube -p minikube docker-env)
+          minikube docker-env | Invoke-Expression      
 
       - name: Build Docker Image
         shell: pwsh
