--- a/Infra/airlab-service.yaml
+++ b/Infra/airlab-service.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     app: airlab-app
   ports:
-    - protocol: "TCP"
-      port: 80
+    - port: 80
       targetPort: 8000
+      name: http
   type: NodePort
