--- a/.github/workflows/docker-local.yml
+++ b/.github/workflows/docker-local.yml
@@ -47,15 +47,15 @@ jobs:
       - name: Build Docker Image on MacOS Locally
         run: |       
           # Build Docker image
-          docker build -t airlab-app-image:latest .
-          docker tag airlab-app-image:latest minikube/airlab-app-image:${{ github.sha }}
+          docker build -t airlab-app-image:${{ github.sha }} .
+          #docker tag airlab-app-image:latest minikube/airlab-app-image:${{ github.sha }}
         working-directory: App/
 
       - name: Deploy Kubectl deployment and services
         run: |            
           # Deploy deployment file
           kubectl apply -f airlab-deployment.yaml
-          kubectl set image deployment/airlab-app airlab-app=minikube/airlab-app-image:${{ github.sha }}
+          kubectl set image deployment/airlab-app airlab-app=airlab-app-image:${{ github.sha }}
 
           # Deploy service file
           kubectl apply -f airlab-service.yaml
